--- a/index.html
+++ b/index.html
@@ -1,57 +1,88 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IliaBebebe.github.io</title>
-    <style>
-        body {
-            background-color: #f0f4f8;
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 20px;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>IliaBebebe.github.io</title>
+<!-- Подключение шрифтов Google -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+<style>
+    /* Общие стили */
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Inter', sans-serif;
+        background: linear-gradient(135deg, #74ebd5 0%, #ACB6E5 100%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        color: #fff;
+    }
+
+    h1 {
+        font-size: 3em;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        text-align: center;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: center;
+        width: 90%;
+        max-width: 800px;
+    }
+
+    a {
+        display: block;
+        padding: 20px 30px;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 15px;
+        text-decoration: none;
+        font-size: 1.25em;
+        font-weight: 600;
+        color: #fff;
+        box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+        backdrop-filter: blur(10px);
+        transition: all 0.3s ease, transform 0.2s ease;
+    }
+
+    a:hover {
+        background: rgba(255, 255, 255, 0.3);
+        transform: translateY(-4px);
+        box-shadow: 0 12px 24px rgba(0,0,0,0.3);
+    }
+
+    /* Анимация при загрузке */
+    @keyframes fadeInUp {
+        from {
+            opacity: 0;
+            transform: translateY(20px);
         }
-        h1 {
-            color: #333;
-            margin-bottom: 30px;
-            font-size: 2.5em;
+        to {
+            opacity: 1;
+            transform: translateY(0);
         }
-        ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        a {
-            text-decoration: none;
-            padding: 15px 25px;
-            background-color: #4CAF50;
-            color: white;
-            border-radius: 8px;
-            font-size: 1.2em;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            transition: background-color 0.3s, transform 0.2s;
-        }
-        a:hover {
-            background-color: #45a049;
-            transform: translateY(-2px);
-        }
-    </style>
+    }
+
+    body {
+        animation: fadeInUp 1s ease-out;
+    }
+</style>
 </head>
 <body>
-    <h1>Добро пожаловать на IliaBebebe.github.io</h1>
-    <ul>
-        <li><a href="/backup.json" target="_blank">backup.json</a></li>
-        <li><a href="/.backup2.json" target="_blank">backup2.json</a></li>
-        <li><a href="/usupovo_life_hall_documents.html" target="_blank">usupovo_life_hall_documents.html</a></li>
-        <li><a href="/readme.md" target="_blank">readme.md</a></li>
-    </ul>
+<h1>Добро пожаловать на IliaBebebe.github.io</h1>
+<ul>
+    <li><a href="/backup.json" target="_blank">backup.json</a></li>
+    <li><a href="/backup2.json" target="_blank">backup2.json</a></li>
+    <li><a href="/usupovo_life_hall_documents.html" target="_blank">usupovo_life_hall_documents.html</a></li>
+    <li><a href="/readme.md" target="_blank">readme.md</a></li>
+</ul>
 </body>
 </html>
